--- a/src/utils/pgwire/Cargo.toml
+++ b/src/utils/pgwire/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1"
 tokio = { version = "=0.2.0-alpha.3", package = "madsim-tokio", features = ["rt", "macros"] }
 tracing = { version = "0.1" }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+regex = "1.5.6"
 
 [dev-dependencies]
 tokio-postgres = "0.7"
